# Dining_code_scraper

./: README.md  main.py  pyproject.toml  review.csv  review.py  scraper.py  url.py
team_project/: config.py  main.py  pyproject.toml
team_project/crawler/: blog_crawler.py  branch_crawler.py  review_crawler.py
team_project/database/: diningcode_db.py
team_project/model/: blog.py  crawling.py  restaurants.py  review.py
