[tool.poetry]
name = "crawling"
version = "0.1.0"
description = "diningcode crawling"
authors = ["taewoo-dev <twin9774@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^4.0.1"
selenium = "^4.23.0"
pymysql = "^1.1.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
